update: Fix mobile overflow
added word-break: break-all

--- a/linkvine/static/css/user/dashboard.css
+++ b/linkvine/static/css/user/dashboard.css
@@ -53,6 +53,7 @@ body {
     background-color: white;
     margin-top: 1rem;
     padding: 0.6rem;
+    word-break: break-all;
 }
 
 .link-box:hover {
